Rename raw_image() to image_bytes() in UserImage

raw_image() was a misnomer, because this function returns
data bytes representation of an image encoded in web-compatible
format such as JPEG for WebUI (ex. chrome://userimage/),
rather than raw bitmap data.

Along the way, get rid of DiscardRawImage() that is not
used at all

BUG=590630
TEST=everything builds as before
TBR=achuith@chromium.org for components/user_manager, bshe@chromium.org for components/wallpaper

Review URL: https://codereview.chromium.org/1747843002

Cr-Commit-Position: refs/heads/master@{#378687}

Former-commit-id: 730760a001e019fc2f5fa8d8a2035d0e9dd8539d